fix: tabs for code highlighting unreadable in dark mode

--- a/themes/hugo-theme/assets/scss/04-components/_highlight.scss
+++ b/themes/hugo-theme/assets/scss/04-components/_highlight.scss
@@ -20,9 +20,9 @@
 	.nav-item {
 		@extend .me-1;
 
-		.active {
-			background-color: #fafafa;
-		}
+		// .active {
+		// 	background-color: #fafafa;
+		// }
 
 		button,
 		a {
